v 6.6.0
  - Permissions: Developer now can manage issue tracker (modify any issue)

v 6.5.1
  - Fix branch selectbox when create merge request from fork

v 6.5.0
  - Dropdown menus on issue#show page for assignee and milestone (Jason Blanchard)
  - Add color custimization and previewing to broadcast messages
  - Fixed notes anchors
  - Load new comments in issues dynamically
  - Added sort options to Public page
  - New filters (assigned/authored/all) for Dashboard#issues/merge_requests (sponsored by Say Media)
  - Add project visibility icons to dashboard
  - Enable secure cookies if https used
  - Protect users/confirmation with rack_attack
  - Default HTTP headers to protect against MIME-sniffing, force https if enabled
  - Bootstrap 3 with responsive UI
  - New repository download formats: tar.bz2, zip, tar (Jason Hollingsworth)
  - Restyled accept widgets for MR
  - SCSS refactored
  - Use jquery timeago plugin
  - Fix 500 error for rdoc files
  - Ability to customize merge commit message (sponsored by Say Media)
  - Search autocomplete via ajax
  - Add website url to user profile
  - Files API supports base64 encoded content (sponsored by O'Reilly Media)
  - Added support for Go's repository retrieval (Bruno Albuquerque)

v6.4.3
  - Don't use unicorn worker killer if PhusionPassenger is defined

v6.4.2
  - Fixed wrong behaviour of script/upgrade.rb

v6.4.1 
  - Fixed bug with repository rename
  - Fixed bug with project transfer

v 6.4.0
  - Added sorting to project issues page (Jason Blanchard)
  - Assembla integration (Carlos Paramio)
  - Fixed another 500 error with submodules
  - UI: More compact issues page
  - Minimal password length increased to 8 symbols
  - Side-by-side diff view (Steven Thonus)
  - Internal projects (Jason Hollingsworth)
  - Allow removal of avatar (Drew Blessing)
  - Project web hooks now support issues and merge request events